# hoodwink_python

./: .gitignore  Dockerfile  pyproject.toml
hoodwink/: ai_client.py  main.py  processor.py
